# artificer

./: .env.example  .gitignore  Cargo.toml  README.md  hardware.json  justfile  verify.sh
.artificer/: archivist.redb
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/engine/src/agent/: delegation_tools.rs  execution.rs  llm_client.rs  llm_types.rs  mod.rs  mode_detection.rs  specialist_tools.rs  task_tools.md  tool_execution.rs  tool_execution_tests.rs  tool_validation.rs
crates/engine/src/agent/execution/: mod.rs  specialist_state.rs  tool_execution.rs  tool_validation.rs
crates/engine/src/agent/implementations/: background.rs  mod.rs  orchestrator.rs  specialists.rs
crates/engine/src/agent/macros/: background.rs  helpers.rs  mod.rs  specialist.rs
crates/engine/src/agent/prompts/: archivist.txt  file_smith.txt  orchestrator.txt  orchestrator_base.txt  specialist_base.txt  web_researcher.txt
crates/engine/src/agent/schema/: context.rs  mod.rs  prompts.rs  response.rs  task.rs
crates/engine/src/agent/schema/system_prompt/: orchestrator.rs  specialist.rs
crates/engine/src/agent/state/: mod.rs  specialist.rs
crates/engine/src/agent/tools/: delegation_tools.rs  mod.rs  specialist_tools.rs  task_tools.rs
crates/engine/src/api/: API.md  events.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs  types.rs
crates/engine/src/background/: README.md  memory_extraction.rs  mod.rs  summarization.rs  title_generation.rs
crates/engine/src/events/: mod.rs
crates/engine/src/memory/: mod.rs
crates/engine/src/orchestrator/: mod.rs  system_prompt.rs  task.rs  tools.rs
crates/engine/src/pool/: agent_pool.rs  gpu_pool.rs  mod.rs
crates/engine/src/services/: title.rs
crates/engine/src/specialist/: background.rs  interactive.rs  mod.rs
crates/engine/src/task/: conversation.rs  mod.rs  registry.rs  specialist.rs  worker.rs
crates/engine/src/task/background/: memory_extraction.rs  mod.rs  summarization.rs  title_generation.rs
crates/envoy/: Cargo.toml
crates/envoy/src/: client.rs  config.rs  main.rs  tools.rs  ui.rs
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/traits/: mod.rs  tool_caller.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/db/: mod.rs  schema.rs
crates/shared/src/events/: mod.rs
crates/shared/src/executor/: mod.rs
crates/shared/src/macros/: mod.rs
crates/shared/src/registry/: mod.rs
crates/shared/src/schemas/: mod.rs
crates/shared/src/toolbelts/: mod.rs  web_search.rs
crates/shared/src/tools/: mod.rs
crates/shared/src/tools/toolbelts/: archivist.rs  examiner.rs  file_smith.rs  memory.rs  mod.rs  router.rs  web_search.rs
crates/specialists/: Cargo.toml
crates/specialists/src/: main.rs  registry.rs
crates/specialists/src/agents/: artificer.rs  mod.rs
crates/specialists/src/toolbelts/: archivist.rs  file_smith.rs
crates/tools/: Cargo.toml
crates/tools/src/: db.rs  executor.rs  lib.rs  macros.rs  registry.rs  schemas.rs
crates/tools/src/db/: mod.rs  schema.rs
crates/tools/src/toolbelts/: archivist.rs
src/: artificer.rs  db.rs  lib.rs  main.rs  registry.rs
src/agents/: artificer.rs  helper.rs  mod.rs  titler.rs
src/api/: handlers.rs  mod.rs  server.rs  types.rs
src/core/: worker.rs
src/engine/: db.rs  mod.rs  registry.rs  worker.rs
src/engine/jobs/: executer.rs  summarization.rs  title_generation.rs
src/functionality/: conversation_manager.rs  mod.rs  title.rs
src/memory/: mod.rs
src/schema/: macros.rs  mod.rs  tasks.rs  tool.rs
src/schema/traits/: agent.rs  mod.rs  tool_caller.rs
src/services/: conversation.rs  mod.rs  title.rs
src/specialist/agent/: attributes.rs  mod.rs
src/state/: mod.rs
src/task/: async_executer.rs  current_task.rs  mod.rs  registry.rs  specialist.rs  worker.rs
src/task/background/: memory_extraction.rs  mod.rs  summarization.rs  title_generation.rs
src/task/interactive/: chat.rs
src/task/tasks/: executer.rs  mod.rs  summarization.rs  title_generation.rs
src/toolbelts/: archivist.rs  file_smith.rs  mod.rs
src/tools/: mod.rs  registry.rs
src/tools/toolbelts/: archivist.rs  file_smith.rs  mod.rs
src/traits/: agent.rs  mod.rs  tool_caller.rs  toolbelt.rs
