[package]
name = "artificer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
once_cell = "1.19"
paste = "1.0"
futures-util = "0.3"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
hostname = "0.4.2"
axum = "0.8.8"
http = "1.4.0"
