[workspace]
members = [
    "crates/engine",
    "crates/envoy",
    "crates/tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Taylor Weenson"]

[workspace.dependencies]
# Shared dependencies across crates
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"