[workspace]
members = [
    "crates/engine",
    "crates/envoy",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Taylor Remund"]

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }

# Internal
artificer-shared = { path = "crates/shared" }

# Shared external
axum = "0.8.8"
futures-util = "0.3"
once_cell = "1.19"
reqwest = { version = "0.13.2", features = ["json", "stream", "query"] }
dotenvy = "0.15"
rusqlite = { version = "0.34" }