[package]
name = "artificer-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "artificer"
path = "src/main.rs"

[dependencies]
artificer-tools = { path = "../tools" }
anyhow.workspace = true
axum = "0.8.8"
dirs = "6.0"
hostname = "0.4.2"
http = "1.4.0"
once_cell = "1.19"
paste = "1.0"
futures-util = "0.3"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }