[package]
name = "artificer-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "artificer"
path = "src/main.rs"

[dependencies]
artificer-tools = { path = "../tools" }
anyhow.workspace = true
axum = "0.8.8"
http = "1.4.0"
once_cell = "1.19"
futures-util = "0.3"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
rusqlite = "0.34.0"