[package]
name = "artificer-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "artificer"
path = "src/main.rs"

[dependencies]
artificer-shared.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true
rusqlite.workspace = true
reqwest = { workspace = true, features = ["stream"] }
axum.workspace = true
futures-util.workspace = true
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
