[package]
name = "artificer-envoy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "envoy"
path = "src/main.rs"

[dependencies]
artificer-shared.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum.workspace = true
futures-util.workspace = true
dirs = "6.0"
hostname = "0.4.2"
