[package]
name = "artificer-shared"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
reqwest = { workspace = true, features = ["blocking"] }
paste = "1.0"
scraper = "0.20"
urlencoding = "2.1.3"
