# crates/tools/Cargo.toml
[package]
name = "artificer-tools"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
once_cell = "1.19"
paste = "1.0"

# Optional dependencies for specific toolbelts
rusqlite = { version = "0.34", optional = true }

[features]
default = ["file_smith", "archivist"]
file_smith = []
archivist = ["rusqlite"]