[package]
name = "artificer-tools"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
once_cell = "1.19"
paste = "1.0"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6.0"  # For home directory